<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/tv_registration"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_layout"
        android:backgroundTint="@color/purple_200"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_et"
            android:hint="@string/et_hint_login"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_et"
            android:hint="@string/et_hint_name"
            android:hintTextColor="#757575"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_et"
            android:hint="@string/et_hint_surname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_et"
            android:hint="@string/et_hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_et"
            android:hint="@string/et_hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_password_rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_et"
            android:hint="@string/et_hint_password_rep"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/b_sign_up"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_layout"
        android:text="@string/b_sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500" />

    <TextView
        android:id="@+id/tv_has_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/tv_has_acc"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/b_sign_in"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_layout"
        android:minHeight="48dp"
        android:text="@string/b_sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500" />

</androidx.appcompat.widget.LinearLayoutCompat>